Now fixing UI bug with columns not aligning

--- a/webapp/src/css/WeekCalendar.css
+++ b/webapp/src/css/WeekCalendar.css
@@ -6,12 +6,8 @@
     margin-bottom: 2em;
 }
 
-.rbc-label {
-    padding: 0;
-}
-
 .rbc-time-slot {
-    text-align: center;
+    text-align: left;
 }
 
 .rbc-time-content {
